# corefud-scorer

./: .gitignore  INSTALL.md  MANIFEST.in  corefud-scorer.py  pyproject.toml  ua-scorer.py
scorer/: cli.py
scorer/ua/: scorer_main.py
